# vendor_opc

./: .gitignore  README.md
beryllium/: bundle.json  config.json  product.gni
beryllium/custom_conf/: BUILD.gn
beryllium/custom_conf/bootanimation/: BUILD.gn
beryllium/custom_conf/power_config/: BUILD.gn  power_mode_config.xml
beryllium/custom_conf/selinux/: BUILD.gn
beryllium/custom_conf/window/: BUILD.gn  display_manager_config.xml
beryllium/default_app_config/: BUILD.gn
beryllium/etc/: BUILD.gn
beryllium/etc/para/: product_beryllium.para
beryllium/ext_service/: BUILD.gn
beryllium/ext_service/pd-mapper/: BUILD.gn  pd-mapper.cfg
beryllium/ext_service/qpower/: BUILD.gn
beryllium/ext_service/qpower/init/: BUILD.gn  qpower_sa.cfg
beryllium/ext_service/qpower/sa_profile/: 65538.json  BUILD.gn
beryllium/ext_service/qpower/services/: BUILD.gn
beryllium/ext_service/qpower/services/include/: log_wrapper.h  qpower_service_ability.h
beryllium/ext_service/qpower/services/src/: qpower_service_ability.cpp
beryllium/ext_service/qrtr/: BUILD.gn  qrtr-ns.cfg
beryllium/ext_service/qrtr/lib/: qrtr.c
beryllium/ext_service/qrtr/src/: addr.c
beryllium/ext_service/rmtfs/: BUILD.gn  rmtfs.c  rmtfs.cfg  storage.c
beryllium/ext_service/timekeep/: BUILD.gn  timekeep.c
beryllium/ext_service/timekeep/init/: BUILD.gn  timekeep_sa.cfg
beryllium/ext_service/timekeep/sa_profile/: 65536.xml  BUILD.gn
beryllium/ext_service/timekeep/services/: BUILD.gn
beryllium/ext_service/timekeep/services/include/: log_wrapper.h  reminder_event_manager.h  timekeep_service_ability.h
beryllium/ext_service/timekeep/services/src/: reminder_event_manager.cpp  timekepp_service_ability.cpp
beryllium/ext_service/tqftpserv/: BUILD.gn  tqftpserv.cfg  translate.c
beryllium/hals/audio/: BUILD.gn  alsa_adapter.json  alsa_paths.json  product.gni
beryllium/hals/audio/config/: audio_policy_config.xml
beryllium/hals/codec/: BUILD.gn
beryllium/hdf_config/khdf/: hdf.hcs
beryllium/hdf_config/khdf/audio/: analog_headset_config.hcs  dai_config.hcs
beryllium/hdf_config/khdf/device_info/: device_info.hcs
beryllium/hdf_config/khdf/hdf_test/: Makefile
beryllium/hdf_config/khdf/input/: input_config.hcs
beryllium/hdf_config/khdf/platform/: emmc_config.hcs  i2c_config.hcs  led_config_linux.hcs  sdio_config.hcs  spi_config.hcs  uart_config.hcs  watchdog_config.hcs
beryllium/hdf_config/khdf/vibrator/: linear_vibrator_config.hcs
beryllium/hdf_config/khdf/wifi/: wlan_platform.hcs
beryllium/hdf_config/uhdf/: BUILD.gn  device_info.hcs  usb_ecm_acm.hcs  usb_pnp_device.hcs
beryllium/image_conf/: BUILD.gn  userdata_image_conf.txt
beryllium/preinstall-config/: BUILD.gn
beryllium/resourceschedule/: BUILD.gn
beryllium/security_config/: high_privilege_process_list.json
common/: BUILD.gn
common/hap/: Launcher_Settings.hap  SystemUI-ControlPanel.hap  SystemUI-DropdownPanel.hap  SystemUI-NavigationBar.hap  SystemUI-NotificationManagement.hap  SystemUI-NotificationPanel.hap  SystemUI-ScreenLock.hap  SystemUI-StatusBar.hap  SystemUI-SystemDialog.hap  SystemUI-VolumePanel.hap  SystemUI.hap
f12/: bundle.json  config.json
f12/custom_conf/: BUILD.gn
f12/custom_conf/bootanimation/: BUILD.gn
f12/custom_conf/power_config/: BUILD.gn  battery_config.json
f12/custom_conf/window/: BUILD.gn  display_manager_config.xml  window_manager_config.xml
f12/default_app_config/: BUILD.gn
f12/etc/: BUILD.gn
f12/etc/para/: product_f12.para
f12/hals/audio/: BUILD.gn  alsa_adapter.json  alsa_paths.json  product.gni
f12/hals/codec/: BUILD.gn
f12/hdf_config/khdf/: Makefile  hdf.hcs
f12/hdf_config/uhdf/: BUILD.gn  device_info.hcs
f12/preinstall-config/: BUILD.gn  install_list.json
f12/resourceschedule/: BUILD.gn
f12/resourceschedule/soc_perf/: socperf_boost_config.xml  socperf_resource_config.xml
opi5plus/: bundle.json  config.json
opi5plus/custom_conf/bootanimation/: BUILD.gn
opi5plus/custom_conf/power_config/: BUILD.gn
opi5plus/custom_conf/window/: BUILD.gn  display_manager_config.xml  window_manager_config.xml
opi5plus/default_app_config/: BUILD.gn
opi5plus/etc/: BUILD.gn
opi5plus/etc/para/: product_opi5plus.para
opi5plus/hals/audio/: BUILD.gn  alsa_adapter.json  product.gni
opi5plus/hals/audio/config/: audio_policy_config.xml
opi5plus/hals/codec/: BUILD.gn
opi5plus/hdf_config/khdf/: hdf.hcs
opi5plus/hdf_config/uhdf/: BUILD.gn
opi5plus/preinstall-config/: BUILD.gn  install_list.json
opi5plus/resourceschedule/: BUILD.gn
opi5plus/resourceschedule/cgroup_sched/: resource_schedule_vendor.cfg
opi5plus/resourceschedule/soc_perf/: socperf_resource_config.xml
opi5plus/sample/gpio/: BUILD.gn  gpio_test.c
rpi4/: bundle.json  config.json
rpi4/custom_conf/bootanimation/: bootanimation_custom_config.json
rpi4/custom_conf/window/: BUILD.gn
rpi4/etc/para/: product_rpi4.para
rpi4/sample/: BUILD.gn
rpi4/sample/gpio/: BUILD.gn
sagit/: bundle.json  config.json
sagit/custom_conf/: BUILD.gn
sagit/custom_conf/bootanimation/: BUILD.gn
sagit/custom_conf/disp_power/: BUILD.gn
sagit/custom_conf/power_config/: BUILD.gn
sagit/custom_conf/selinux/: BUILD.gn
sagit/custom_conf/window/: BUILD.gn
sagit/default_app_config/: BUILD.gn
sagit/etc/: BUILD.gn
sagit/etc/para/: product_sagit.para
sagit/ext_service/: BUILD.gn
sagit/ext_service/diag/: BUILD.gn  diag-router.cfg
sagit/ext_service/pd-mapper/: BUILD.gn
sagit/ext_service/qrtr/: BUILD.gn  qrtr-ns.cfg
sagit/ext_service/qrtr/lib/: libqrtr.h  qrtr_copy.h
sagit/ext_service/qrtr/src/: cfg.c  lookup.c  ns.c
sagit/ext_service/rmtfs/: BUILD.gn  storage.c
sagit/ext_service/tqftpserv/: BUILD.gn  tqftpserv.cfg
sagit/hals/audio/: BUILD.gn
sagit/hals/audio/config/: audio_policy_config.xml
sagit/hals/codec/: BUILD.gn
sagit/hdf_config/khdf/: Makefile
sagit/hdf_config/uhdf/: BUILD.gn
sagit/image_conf/: system_image_conf.txt
sagit/preinstall-config/: BUILD.gn
sagit/resourceschedule/: BUILD.gn
sagit/security_config/: high_privilege_process_list.json
