# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("default_app_detail_config") {
  source = "./default_app.json"
  relative_install_dir = "app"
  part_name = "product_f12"
}

ohos_prebuilt_etc("launcher_pad") {
  source = "//vendor/opc/common/hap/Launcher.hap"
  module_install_dir = "app/com.ohos.launcher"
  part_name = "product_f12"
}

ohos_prebuilt_etc("launcher_settings_pad") {
  source = "//vendor/opc/common/hap/Launcher_Settings.hap"
  module_install_dir = "app/com.ohos.launcher"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI_pad") {
  source = "//vendor/opc/common/hap/SystemUI.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-ControlPanel_pad") {
  source = "//vendor/opc/common/hap/SystemUI-ControlPanel.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-NavigationBar_pad") {
  source = "//vendor/opc/common/hap/SystemUI-NavigationBar.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-NotificationManagement_pad") {
  source = "//vendor/opc/common/hap/SystemUI-NotificationManagement.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-NotificationPanel_pad") {
  source = "//vendor/opc/common/hap/SystemUI-NotificationPanel.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-StatusBar_pad") {
  source = "//vendor/opc/common/hap/SystemUI-StatusBar.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-VolumePanel_pad") {
  source = "//vendor/opc/common/hap/SystemUI-VolumePanel.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-SystemDialog_pad") {
  source = "//vendor/opc/common/hap/SystemUI-SystemDialog.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

ohos_prebuilt_etc("SystemUI-ScreenLock_pad") {
  source = "//vendor/opc/common/hap/SystemUI-ScreenLock.hap"
  module_install_dir = "app/com.ohos.systemui"
  part_name = "product_f12"
}

group("default_app_config") {
  deps = [
    ":default_app_detail_config",
    # ":launcher_pad",
    # ":launcher_settings_pad",
    # ":SystemUI_pad",
    # ":SystemUI-ControlPanel_pad",
    # ":SystemUI-NavigationBar_pad",
    # ":SystemUI-NotificationManagement_pad",
    # ":SystemUI-NotificationPanel_pad",
    # ":SystemUI-StatusBar_pad",
    # ":SystemUI-VolumePanel_pad",
    # ":SystemUI-SystemDialog_pad",
    # ":SystemUI-ScreenLock_pad",
  ]
}
