# Copyright (C) 2021-2022 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni") 

ohos_executable("qrtr-ns") {
  sources = [
    "lib/logging.c",
    "src/addr.c",
    "src/ns.c",
    "src/map.c",
    "src/hash.c",
    "src/waiter.c",
    "src/util.c",
  ]

  cflags = [
      "-Wno-pointer-arith",
      "-Wno-error"
  ]

  include_dirs = [ 
    "./lib",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "product_sagit"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_shared_library("libqrtr") {
  sources = [
    "lib/logging.c",
    "lib/qrtr.c",
    "lib/qmi.c",
  ]
  
  cflags = [
    "-fPIC", 
    "-Wno-error"
  ]

  include_dirs = [ 
    "./lib",
    "./src",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  install_images = [ chipset_base_dir ]
  part_name = "product_sagit"
  install_enable = true
}

ohos_prebuilt_etc("qrtr-ns.cfg") {
  install_enable = true
  source = "qrtr-ns.cfg"
  module_install_dir = "etc/init"
  install_images = [ chipset_base_dir ]
  part_name = "product_sagit"
}

group("qrtr_targets") {
  deps = [
    ":qrtr-ns",
    ":libqrtr",
    ":qrtr-ns.cfg",
  ]
}